tests/snapshots/integration_tests__multiline_label.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌─────┐        ┌───┐
│Line1│    ┌──▶│End│
│Line2│────┘   └───┘
└─────┘
