tests/snapshots/integration_tests__node_label_update.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌───────┐        ┌───────┐
│Label A│───────▶│Label B│
└───────┘        └───────┘
