tests/snapshots/integration_tests__node_shapes.snap
---
source: tests/integration_tests.rs
expression: result.output
---
                                                                     ╭────────╮
┌─────────┐        ╭───────╮        (╭────╮)            /\           ├────────┤        (───────)
│Rectangle│───────▶│Rounded│───────▶(Circle)───────▶<Diamond>───────▶│Database│───────▶(Stadium)
└─────────┘        ╰───────╯        (╰────╯)            \/           ├────────┤        (───────)
                                                                     ╰────────╯
