tests/snapshots/integration_tests__parallelogram_trapezoid_shapes.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌─────/        ┌───────┐
/Input/───────▶│Process│
\─────┘        \───────/
