tests/snapshots/integration_tests__pie_chart_no_title.snap
---
source: tests/integration_tests.rs
expression: result.output
---
  Yes  │█████████████████████         │ 70 (70.0%)
  No   │▓▓▓▓▓▓▓▓▓                     │ 30 (30.0%)

       Total: 100
