tests/snapshots/integration_tests__rl_direction.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌───┐        ┌───┐
│ B │─◀──────│ A │
└───┘        └───┘
