tests/snapshots/integration_tests__sequence_diagram_activation.snap
---
source: tests/integration_tests.rs
expression: result.output
---
   ┌─────┐      ┌───┐   
   │Alice│      │Bob│   
   └─────┘      └───┘   
      │           ┃     
      │──────────▶┃       Hello
      │           ┃     
      │◀──────────┃       Bye
      │           │
