tests/snapshots/integration_tests__sequence_diagram_alt.snap
---
source: tests/integration_tests.rs
expression: result.output
---
   ┌─────┐      ┌───┐   
   │Alice│      │Bob│   
   └─────┘      └───┘   
      │           │     
      │──────────▶│       Request
 ┌[alt Success]───────┐
      │           │     
      │◀──────────│       200 OK
 │[Failure]╌╌╌╌╌╌╌╌╌╌╌│
      │           │     
      │◀──────────│       500 Error
 └────────────────────┘
      │           │
