tests/snapshots/integration_tests__sequence_diagram_auto.snap
---
source: tests/integration_tests.rs
expression: result.output
---
  ┌──────┐    ┌──────┐  
  │Client│    │Server│  
  └──────┘    └──────┘  
      │           │     
      │──────────▶│       Request
      │           │     
      │◀··········│       Response
      │           │
