tests/snapshots/integration_tests__sequence_diagram_loop.snap
---
source: tests/integration_tests.rs
expression: result.output
---
   ┌─────┐      ┌───┐   
   │Alice│      │Bob│   
   └─────┘      └───┘   
      │           │     
      │──────────▶│       Hello
 ┌[loop Every minute]─┐
      │           │     
      │◀──────────│       Ping
 └────────────────────┘
      │           │
